@@ -1,3 +1,6 @@
+2004-03-11  Bryan Chan  <b8chan@uwaterloo.ca>
+	* src/NoiseShader.cpp: Moved shdemo over to shrike.
+	
 2004-03-11  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
 	* src/ShrikeFrame.cpp (setShader): Use firstTimeInit() here
